--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.2",
   "type": "module",
+  "packageManager": "pnpm@8.1.1",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
